added demo folder. changed units base data from list of tuples to dict. added units multiply. no doc updates.  added package data to project setup for future storage of units stuff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
   "sphinx==8.2.3"
 ]
 
+[tool.setuptools.package-data]
+pyee=["data/*"]
+
 [tool.setuptools.dynamic]
 version = {attr = "pyee.__version__"}  # any module attribute compatible with ast.literal_eval
 readme = {file = ["README.md"]}
