--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,8 @@
 [build-system]
-requires = ["setuptools >= 61.0"]
+requires = [
+    "setuptools >= 61.0",
+    "numpy >= 2.2.4"
+]
 build-backend = "setuptools.build_meta"
 [project]
 name = "pyee"
