--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,9 @@
         "-p",
         "test_*.py"
     ],
+    "python.terminal.activateEnvironment": true,
+    "python.terminal.activateEnvInCurrentTerminal": true,
+    "python.defaultInterpreterPath": "~/venv/bin/python",
     "python.testing.pytestEnabled": false,
     "python.testing.unittestEnabled": true
 }
