--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
 [build-system]
 requires = [
     "setuptools >= 61.0",
-    "numpy >= 2.2.4"
+    "numpy >= 2.2.4",
+    "sphinx >= 8.2.3"
 ]
 build-backend = "setuptools.build_meta"
 [project]
