sphinx works... messed with vscode paths.  no functional changes just toolchain shenanigans

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,7 +26,8 @@
                 "html"
             ],
             "options": {
-                "cwd": "${workspaceFolder}/docs"
+                "cwd": "${workspaceFolder}/docs",
+                "env": {"PATH": "${workspaceFolder}/.venv/bin:${env:PATH}"}
             },
             "problemMatcher": [
                 "$go"
