--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,5 @@ readme = {file = ["README.md"]}
 
 [tool.pyright]
 typeCheckingMode = "basic"
+verboseOutput = "true"
+extraPaths = [".", "pyee", "./pyee"]
