full clean and reinstall for vscode... pylance seems to be OK with relative imports again lol.  what a mess

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ pyee=["data/*"]
 version = {attr = "pyee.__version__"}  # any module attribute compatible with ast.literal_eval
 readme = {file = ["README.md"]}
 
-[tool.pyright]
-typeCheckingMode = "basic"
+[tool.pylance]
+typeCheckingMode = "standard"
 verboseOutput = "true"
-extraPaths = [".", "pyee", "./pyee"]
+extraPaths = [".", "./pyee", "./pyee", "./pyee/*"]
